--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         {% for item in skill.items %}
-        <div class="col-2 d-flex flex-column align-items-stretch wow fadeInUp"
+        <div class="col-4 col-md-2 d-flex flex-column align-items-stretch wow fadeInUp"
              data-wow-duration="0.4s">
             <img alt="{{ item.name }}" class="rounded w-100 flex-grow-1" src="{{ item.image | relative_url }}"
                  style="object-fit: contain; height: 76px;">
